# Kaztimer

./: .gitignore  Android.mk  CMakeLists.txt  ChangeLog  README.md  kaztimer.files  kaztimer.includes  libkaztimer.recipe
debian/: changelog  control  copyright  rules
kaztimer/: kaztimer.cpp  kaztimer.h  kaztimer_win.cpp  kaztimer_win.h
src/: kaztimer.cpp  kaztimer.h
