CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(kaztimer)

SET(KAZTIMER_SOURCES
    ${CMAKE_SOURCE_DIR}/src/kaztimer.cpp
)

SET(KAZTIMER_HEADERS
    ${CMAKE_SOURCE_DIR}/src/kaztimer.h
)

SET(CMAKE_C_FLAGS "-std=c99")

ADD_LIBRARY(kaztimer STATIC ${KAZTIMER_SOURCES})
INSTALL(TARGETS kaztimer ARCHIVE DESTINATION lib)

INSTALL(FILES ${KAZTIMER_HEADERS} DESTINATION include/kaztimer)


